Fix Extensions.AppLaunchSource off-by-one error

BUG=661405

Review-Url: https://codereview.chromium.org/2486453002
Cr-Commit-Position: refs/heads/master@{#432638}

Former-commit-id: 004905cf6e6644d5d31bba196cb4cb41fb68bb0a